# testrobot

./: README.md
testrobot_assistants/: CMakeLists.txt  package.xml
testrobot_assistants/launch/: publish_footprints.launch  publish_vehicle_footprint.launch  set_simulation_timer.launch
testrobot_control/: CMakeLists.txt  package.xml  pub_test
testrobot_control/src/: pub_test.cc  pub_test_2.cc  thruster_manager.cc
testrobot_description/: CMakeLists.txt  package.xml
testrobot_description/TR1/: model.config  model.sdf
testrobot_description/kraken_model/: model.sdf
testrobot_description_plugins/: CMakeLists.txt  package.xml
testrobot_description_plugins/include/testrobot_description_plugins/: BuoyantObject.hh  Def.hh  HydrodynamicModel.hh  UnderwaterObjectPlugin.hh  UnderwaterObjectROSPlugin.hh
testrobot_description_plugins/src/: BuoyantObject.cc  HydrodynamicModel.cc  UnderwaterObjectPlugin.cc  UnderwaterObjectROSPlugin.cc  thrusterPlugin.cc
testrobot_gazebo/: CMakeLists.txt  package.xml
testrobot_gazebo/launch/: empty_underwater_world.launch  empty_world.launch  lake.launch
testrobot_gazebo/world_models/lake/: model.sdf
testrobot_gazebo/worlds/: empty_underwater.world  empty_world.world  lake.world
testrobot_msg_stack/: CMakeLists.txt  package.xml
testrobot_msg_stack/msg/: UnderwaterObjectModel.msg
testrobot_msg_stack/srv/: GetModelProperties.srv  SetUseGlobalCurrentVel.srv
testrobot_world_plugins/testrobot_world_plugins/: CMakeLists.txt  package.xml
testrobot_world_plugins/testrobot_world_plugins/include/testrobot_world_plugins/: UnderwaterWorldPlugin.hh
testrobot_world_plugins/testrobot_world_plugins/src/: GaussMarkovProcess.cc  UnderwaterWorldPlugin.cc
testrobot_world_plugins/testrobot_world_ros_plugins/: CMakeLists.txt  package.xml
testrobot_world_plugins/testrobot_world_ros_plugins/include/testrobot_world_ros_plugins/: UnderwaterWorldROSPlugin.hh
testrobot_world_plugins/testrobot_world_ros_plugins/src/: UnderwaterWorldROSPlugin.cc
testrobot_world_plugins/testrobot_world_ros_plugins_msgs/: CMakeLists.txt  package.xml
