<?xml version="1.0"?>
<package>
  <name>testrobot_description_plugins</name>
  <version>0.0.0</version>
  <description>The testrobot_description_plugins package</description>

  <maintainer email="shubham@todo.todo">shubham</maintainer>

<license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>testrobot_msg_stack</build_depend>
  <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>sensor_msgs</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>testrobot_msg_stack</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  </package>
