<?xml version="1.0"?>
<package>
  <name>testrobot_msg_stack</name>
  <version>0.0.0</version>
  <description>The testrobot_msg_stack package</description>

  <maintainer email="shubham@todo.todo">shubham</maintainer>

 <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



 </package>
